--- a/Mail Man/Mail Man/Login.xaml
+++ b/Mail Man/Mail Man/Login.xaml
@@ -5,14 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Mail_Man"
         mc:Ignorable="d"
-        Title="Login" Height="450" Width="800" Background="#FF181615" ResizeMode="NoResize">
+        Title="Login" Height="500" Width="800" Background="#FF181615" ResizeMode="NoResize">
     <Grid>
-        <TextBlock HorizontalAlignment="Center" Margin="0,385,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="White" FontFamily="MV Boli"><Run Text="Sobhan &amp; Kiarash"/><LineBreak/><Run/></TextBlock>
-        <Grid Margin="252,101,250,68" Background="#FF1A1A1A">
-            <PasswordBox Margin="62,128,62,104" Background="#FF1A1A1A" BorderBrush="#FFFF7B00" Foreground="White" Name="tbPassword"/>
+        <TextBlock HorizontalAlignment="Center" Margin="0,415,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="White" FontFamily="MV Boli"><Run Text="Sobhan &amp; Kiarash"/><LineBreak/><Run/></TextBlock>
+        <Grid Margin="240,91,233,91" Background="#FF1A1A1A">
             <TextBlock HorizontalAlignment="Center" Margin="0,20,0,0" TextWrapping="Wrap" Text="Welcome" VerticalAlignment="Top" Foreground="White" Height="27" Width="132" FontWeight="Bold" FontFamily="Gautami" FontSize="24"/>
             <Label FontSize="10" Visibility="Collapsed" Foreground="Red" HorizontalContentAlignment="Center" VerticalAlignment="Bottom" Height="30" Margin="56" RenderTransformOrigin="0.499,0.553" Name="lblError" >*Username or Password is incorrect!*</Label>
-            <Button Content="Log In" HorizontalAlignment="Center" Margin="0,189,0,0" VerticalAlignment="Top" Height="31" Width="160" FontFamily="Microsoft YaHei UI" FontSize="14" BorderBrush="#FFFF7B00" Foreground="White" Click="btnLog_In">
+            <Button Content="Log In" HorizontalAlignment="Center" Margin="0,205,0,0" VerticalAlignment="Top" Height="31" Width="160" FontFamily="Microsoft YaHei UI" FontSize="14" BorderBrush="#FFFF7B00" Foreground="White" Click="btnLog_In">
                 <Button.Background>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                         <GradientStop Color="#FFB52121"/>
@@ -25,11 +24,12 @@
                     </Style>
                 </Button.Resources>
             </Button>
-            <Button x:Name="btn_signup" Click="btn_Signup" Content="Join now" HorizontalAlignment="Center" Margin="0,238,0,0" VerticalAlignment="Top" Foreground="#FFFF7B00" BorderBrush="#FF1A1A1A" Background="#FF1A1A1A" FontWeight="Bold" Height="23" Width="89"/>
+            <Button x:Name="btn_signup" Click="btn_Signup" Content="Join now" HorizontalAlignment="Center" Margin="0,252,0,0" VerticalAlignment="Top" Foreground="#FFFF7B00" BorderBrush="#FF1A1A1A" Background="#FF1A1A1A" FontWeight="Bold" Height="23" Width="89"/>
         </Grid>
-        <TextBox HorizontalAlignment="Center" Margin="0,181,0,0" TextWrapping="Wrap" Text="Username" VerticalAlignment="Top" Width="162" Height="25" Background="#FF1A1A1A" BorderBrush="#FFFF7B00" Foreground="White" Name ="tbUsername" LostFocus="tbUsername_LostFocus"/>
-        <TextBox x:Name="tbUsername_Watermark" HorizontalAlignment="Center" Margin="0,181,0,0" TextWrapping="Wrap" Text="Username" VerticalAlignment="Top" Width="172" Background="#FF1A1A1A" BorderBrush="#FFFF7B00" Foreground="Gray" Height="29" GotFocus="tbUsername_Watermark_GotFocus"/>
-        
+        <TextBox HorizontalAlignment="Center" Margin="0,181,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="162" Height="25" Background="#FF1A1A1A" BorderBrush="#FFFF7B00" Foreground="White" Name ="tbUsername" LostFocus="tbUsername_LostFocus"/>
+        <TextBox x:Name="tbUsername_Watermark" HorizontalAlignment="Center" Margin="0,181,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="172" Background="#FF1A1A1A" BorderBrush="#FFFF7B00" Foreground="Gray" Height="29" GotFocus="tbUsername_Watermark_GotFocus" TextChanged="tbUsername_Watermark_TextChanged" Text="Username"/>
+        <PasswordBox HorizontalAlignment="Center"  Background="#FF1A1A1A" BorderBrush="#FFFF7B00" Foreground="White" x:Name="tbPassword" VerticalAlignment="Top" Width="172" Height="30" Margin="0,242,0,0"/>
+
 
     </Grid>
 </Window>
