--- a/Mail Man/Mail Man/ClientMenu.xaml
+++ b/Mail Man/Mail Man/ClientMenu.xaml
@@ -18,25 +18,54 @@
         <Button x:Name="btn_change_UserPass" Content="Change Username&#xD;&#xA;or Password" Click="btn_change_UserPass_Click" HorizontalAlignment="Left" Margin="10,355,0,0" VerticalAlignment="Top" Height="88" Width="190" Foreground="#FFFF7B00" FontSize="18" FontFamily="Arial Rounded MT Bold" RenderTransformOrigin="0.511,0.41" Background="#FF181615" BorderBrush="#FF181615"/>
 
 
-        <Grid x:Name="grid_reportOfOrders" Margin="205,10,0,-10" Visibility="Visible">
-            <TextBlock x:Name="txtblock_PersonalId" HorizontalAlignment="Left" Margin="56,60,0,0" TextWrapping="Wrap" Text="Personal ID" VerticalAlignment="Top" Height="36" Width="132" Cursor="" Foreground="#FFFF7B00" FontSize="24"/>
-            <TextBlock x:Name="txtblock_PersonalId_Copy" HorizontalAlignment="Left" Margin="56,152,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="35" Width="170" Cursor="" Foreground="#FFFF7B00" FontSize="24"><Run Text="Package Type"/><LineBreak/><Run/></TextBlock>
-            <TextBlock x:Name="txtblock_PersonalId_Copy1" HorizontalAlignment="Left" Margin="56,242,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="35" Width="170" Cursor="" Foreground="#FFFF7B00" FontSize="24"><Run Text="Price Paid"/><LineBreak/><Run/></TextBlock>
-            <TextBlock x:Name="txtblock_PersonalId_Copy2" HorizontalAlignment="Left" Margin="56,328,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="35" Width="132" Cursor="" Foreground="#FFFF7B00" FontSize="24"><Run Text="Weigh"/><LineBreak/><Run/></TextBlock>
-            <TextBlock x:Name="txtblock_PersonalId_Copy3" HorizontalAlignment="Left" Margin="56,416,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="35" Width="132" Cursor="" Foreground="#FFFF7B00" FontSize="24"><Run Text="Post Type"/><LineBreak/><Run/></TextBlock>
+        <Grid x:Name="grid_reportOfOrders" Margin="205,10,0,-10" Visibility="Collapsed">
+            <TextBlock x:Name="txtblock_PersonalId" HorizontalAlignment="Left" Margin="56,60,0,0" TextWrapping="Wrap" Text="Personal ID" VerticalAlignment="Top" Height="36" Width="132" Cursor="" FontSize="24">
+                <TextBlock.Foreground>
+                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                        <GradientStop Color="White"/>
+                        <GradientStop Color="#FFFF7B00" Offset="1"/>
+                    </LinearGradientBrush>
+                </TextBlock.Foreground>
+            </TextBlock>
+            <TextBlock x:Name="txtblock_PersonalId_Copy1" HorizontalAlignment="Left" Margin="56,234,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="35" Width="170" Cursor="" FontSize="24">
+                <TextBlock.Foreground>
+                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                        <GradientStop Color="#FFFF7B00" Offset="1"/>
+                        <GradientStop Color="White" Offset="0"/>
+                    </LinearGradientBrush>
+                </TextBlock.Foreground><Run Text="Price Paid"/><LineBreak/><Run/></TextBlock>
+            <TextBlock x:Name="txtblock_PersonalId_Copy2" HorizontalAlignment="Left" Margin="56,328,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="35" Width="132" Cursor="" FontSize="24">
+                <TextBlock.Foreground>
+                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                        <GradientStop Color="#FFFF7B00" Offset="1"/>
+                        <GradientStop Color="White" Offset="0"/>
+                    </LinearGradientBrush>
+                </TextBlock.Foreground><Run Text="Weigh"/><LineBreak/><Run/></TextBlock>
             <Button Content="Search&#xD;&#xA;" Margin="597,498,88,40" Background="#FFFF7B00" BorderBrush="#FFFF7B00" FontSize="36" FontFamily="Bahnschrift Condensed" Click="Search_Click"/>
-            <TextBox x:Name="pricePaid_txt" HorizontalAlignment="Center" Margin="0,232,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="42" Width="218" Background="Black" Foreground="#FFFF7B00" RenderTransformOrigin="0.653,1.083"/>
-            <TextBox x:Name="weigh_txt" HorizontalAlignment="Center" Margin="0,318,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="42" Width="218" Background="Black" Foreground="#FFFF7B00" RenderTransformOrigin="0.653,1.083"/>
-            <TextBox x:Name="personalID_txt" HorizontalAlignment="Center" Margin="0,65,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="42" Width="218" Background="Black" Foreground="#FFFF7B00" RenderTransformOrigin="0.653,1.083"/>
-            <ComboBox x:Name="postType_combobox" HorizontalAlignment="Center" Margin="0,416,0,0" VerticalAlignment="Top" Width="218" RenderTransformOrigin="-1.062,13.458" Height="32">
-                <CheckBox Content="VIP"/>
-                <CheckBox Content="usuall"/>
-            </ComboBox>
-            <ComboBox x:Name="packagetop_combobox" HorizontalAlignment="Center" Margin="0,152,0,0" VerticalAlignment="Top" Width="218" Height="32">
-                <CheckBox Content="Object"/>
-                <CheckBox Content="Document"/>
-                <CheckBox Content="breackable"/>
-            </ComboBox>
+            <TextBox x:Name="pricePaid_txt" HorizontalAlignment="Center" Margin="0,232,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="42" Width="218" Background="#FF181615" Foreground="#FFFF7B00" RenderTransformOrigin="0.653,1.083"/>
+            <TextBox x:Name="weigh_txt" HorizontalAlignment="Center" Margin="0,318,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="42" Width="218" Background="#FF181615" Foreground="#FFFF7B00" RenderTransformOrigin="0.653,1.083"/>
+            <TextBox x:Name="personalID_txt" HorizontalAlignment="Center" Margin="0,65,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="42" Width="218" Background="#FF181615" Foreground="#FFFF7B00" RenderTransformOrigin="0.653,1.083"/>
+            <TextBlock x:Name="Type_txtblock" HorizontalAlignment="Left" Margin="58,417,0,0" TextWrapping="Wrap" Text="Type" VerticalAlignment="Top" Height="37" Width="217" FontSize="24">
+                <TextBlock.Foreground>
+                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                        <GradientStop Color="#FFFF7B00" Offset="1"/>
+                        <GradientStop Color="White" Offset="0"/>
+                    </LinearGradientBrush>
+                </TextBlock.Foreground>
+            </TextBlock>
+            <TextBlock x:Name="packagecontent_txtblock" HorizontalAlignment="Left" Margin="56,160,0,0" TextWrapping="Wrap" Text="Package Content" VerticalAlignment="Top" Height="37" Width="217" FontSize="24">
+                <TextBlock.Foreground>
+                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                        <GradientStop Color="#FFFF7B00" Offset="1"/>
+                        <GradientStop Color="White" Offset="0"/>
+                    </LinearGradientBrush>
+                </TextBlock.Foreground>
+            </TextBlock>
+            <CheckBox x:Name="vip_checkbox" Checked="vip_checkbox_Checked" Content="VIP" HorizontalAlignment="Left" Margin="338,436,0,0" VerticalAlignment="Top" Foreground="#FFFF7B00" BorderBrush="#FFFF7B00" FontSize="18" Width="110"/>
+            <CheckBox x:Name="usuall_checkbox" Checked="usuall_checkbox_Checked" Content="Usuall" HorizontalAlignment="Left" Margin="468,436,0,0" VerticalAlignment="Top" Foreground="#FFFF7B00" BorderBrush="#FFFF7B00" FontSize="18" FontWeight="Bold" Width="88"/>
+            <CheckBox x:Name="breack_checkbox" Checked="breack_checkbox_Checked" Content="Breackable" HorizontalAlignment="Left" Margin="349,167,0,0" VerticalAlignment="Top" Foreground="#FFFF7B00" BorderBrush="#FFFF7B00" FontSize="18" Width="109"/>
+            <CheckBox x:Name="doc_checkbox" Checked="doc_checkbox_Checked" Content="Document" HorizontalAlignment="Left" Margin="349,139,0,0" VerticalAlignment="Top" Foreground="#FFFF7B00" BorderBrush="#FFFF7B00" FontSize="18" Width="109"/>
+            <CheckBox x:Name="object_checkbox" Checked="object_checkbox_Checked" Content="Object" HorizontalAlignment="Left" Margin="349,195,0,0" VerticalAlignment="Top" Foreground="#FFFF7B00" BorderBrush="#FFFF7B00" FontSize="18" Width="109"/>
         </Grid>
         <Grid x:Name="grid_showinformation" Margin="205,0,0,0" Visibility ="Collapsed">
             <TextBox HorizontalAlignment="Left" Margin="45,86,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="291" Height="38" BorderBrush="#FFFF7B00" Background="Black"/>
@@ -93,23 +122,14 @@
                     </LinearGradientBrush>
                 </Button.Background>
             </Button>
-            <TextBox x:Name="tbUsername" HorizontalAlignment="Left" Margin="394,36,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="272" Height="58" Foreground="#FFFF7B00" Background="Black" BorderBrush="#FF1A1A1A" TextChanged="tbusername_TextChanged"/>
+            <TextBox x:Name="tbUsername" HorizontalAlignment="Left" Margin="394,36,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="272" Height="58" Foreground="#FFFF7B00" Background="#FF181615" BorderBrush="White" TextChanged="tbusername_TextChanged"/>
             <Label x:Name="lblUsername" HorizontalAlignment="Left" Margin="394,94,0,0" FontSize="18" VerticalAlignment="Top" Width="272" Foreground="Red" Height="58" HorizontalContentAlignment="Center"></Label>
-            <TextBox x:Name="Password" HorizontalAlignment="Left" Margin="394,200,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="272" Height="56" Foreground="#FFFF7B00" BorderBrush="#FF1A1A1A" Background="Black" TextChanged="Password_TextChanged"/>
+            <TextBox x:Name="Password" HorizontalAlignment="Left" Margin="394,200,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="272" Height="56" Foreground="#FFFF7B00" BorderBrush="White" Background="#FF181615" TextChanged="Password_TextChanged"/>
             <Label x:Name="lblPassword" HorizontalAlignment="Left" Margin="394,258,0,0" FontSize="18" VerticalAlignment="Top" Width="272" Foreground="Red" Height="58" HorizontalContentAlignment="Center"></Label>
 
         </Grid>
         <Grid x:Name="grid_information" Margin="205,10,10,0" Visibility="Collapsed">
-            <ComboBox x:Name="packagecontent_dropbox_information" HorizontalAlignment="Left" Margin="36,227,0,0" VerticalAlignment="Top" Width="235" IsDropDownOpen="True"  Height="42" Foreground="#FFFF7B00" BorderBrush="#FFFF7B00" Background="#FF181615">
-                <CheckBox Content="Object"/>
-                <CheckBox Content="Document"/>
-                <CheckBox Content="breackable"/>
-            </ComboBox>
-            <CheckBox x:Name="expensive_checkbox_information" Content="Expensive" HorizontalAlignment="Left" Margin="36,349,0,0" VerticalAlignment="Top" Height="33" Width="234" Foreground="#FFFF7B00" FontSize="16" IsChecked="False" Cursor="" BorderBrush="#FFFF7B00"/>
-            <ComboBox x:Name="whichModel_dropbox_information" HorizontalAlignment="Left" Margin="627,342,0,0" VerticalAlignment="Top" Width="209" Height="40" BorderBrush="#FFFF7B00" Foreground="#FFFF7B00" Background="#FF181615">
-                <CheckBox Content="usuall"/>
-                <CheckBox Content="VIP"/>
-            </ComboBox>
+            <CheckBox x:Name="expensive_checkbox_information" Content="Expensive" HorizontalAlignment="Left" Margin="36,389,0,0" VerticalAlignment="Top" Height="33" Width="234" Foreground="#FFFF7B00" FontSize="16" IsChecked="False" Cursor="" BorderBrush="#FFFF7B00"/>
             <TextBlock x:Name="weigh_txtblock_information" HorizontalAlignment="Left" Margin="627,162,0,0" TextWrapping="Wrap" Text="Weigh" VerticalAlignment="Top" Height="52" Width="117" FontSize="24">
                 <TextBlock.Foreground>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -153,6 +173,11 @@
             <Label x:Name="sender_lbl_information" Content="Label" HorizontalAlignment="Left" Margin="36,100,0,0" VerticalAlignment="Top" Height="62" Width="203" BorderBrush="#FFFF7B00" Foreground="#FFFF7B00"/>
             <Label x:Name="reciever_lbl__information" Content="Label" HorizontalAlignment="Left" Margin="627,100,0,0" VerticalAlignment="Top" Height="62" Width="203" BorderBrush="#FFFF7B00" Foreground="#FFFF7B00"/>
             <Label x:Name="weigh_lbl_information" Content="Label" HorizontalAlignment="Left" Margin="627,215,0,0" VerticalAlignment="Top" Height="54" Width="203" BorderBrush="#FFFF7B00" Foreground="#FFFF7B00" />
+            <CheckBox x:Name="vip_checkbox1" Checked="vip_checkbox_Checked" Content="VIP" HorizontalAlignment="Left" Margin="627,349,0,0" VerticalAlignment="Top" Foreground="#FFFF7B00" BorderBrush="#FFFF7B00" FontSize="18" Width="109"/>
+            <CheckBox x:Name="usuall_checkbox1" Checked="usuall_checkbox_Checked" Content="Usuall" HorizontalAlignment="Left" Margin="627,387,0,0" VerticalAlignment="Top" Foreground="#FFFF7B00" BorderBrush="#FFFF7B00" FontSize="18" FontWeight="Bold" Width="89"/>
+            <CheckBox x:Name="breack_checkbox1" Checked="breack_checkbox_Checked" Content="Breackable" HorizontalAlignment="Left" Margin="36,215,0,0" VerticalAlignment="Top" Foreground="#FFFF7B00" BorderBrush="#FFFF7B00" FontSize="18" Width="109"/>
+            <CheckBox x:Name="doc_checkbox1" Checked="doc_checkbox_Checked" Content="Document" HorizontalAlignment="Left" Margin="36,251,0,0" VerticalAlignment="Top" Foreground="#FFFF7B00" BorderBrush="#FFFF7B00" FontSize="18" Width="109"/>
+            <CheckBox x:Name="object_checkbox1" Checked="object_checkbox_Checked" Content="Object" HorizontalAlignment="Left" Margin="36,287,0,0" VerticalAlignment="Top" Foreground="#FFFF7B00" BorderBrush="#FFFF7B00" FontSize="18" Width="109"/>
         </Grid>
 
 
