--- a/Mail Man/Mail Man/MainWindow.xaml
+++ b/Mail Man/Mail Man/MainWindow.xaml
@@ -98,25 +98,28 @@
 
         </Grid>
 
-        <Grid x:Name="grid_reportOfOrders" Margin="5,10,0,-10" Grid.Column="1" Visibility="Visible">
-            <TextBlock x:Name="txtblock_PersonalId" HorizontalAlignment="Left" Margin="56,60,0,0" TextWrapping="Wrap" Text="SSN" VerticalAlignment="Top" Height="36" Width="132" Cursor="" Foreground="#FFFF7B00" FontSize="24"/>
-            <TextBlock x:Name="txtblock_PersonalId_Copy" HorizontalAlignment="Left" Margin="56,152,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="35" Width="170" Cursor="" Foreground="#FFFF7B00" FontSize="24"><Run Text="Package Type"/><LineBreak/><Run/></TextBlock>
-            <TextBlock x:Name="txtblock_PersonalId_Copy1" HorizontalAlignment="Left" Margin="56,242,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="35" Width="170" Cursor="" Foreground="#FFFF7B00" FontSize="24"><Run Text="Price Paid"/><LineBreak/><Run/></TextBlock>
-            <TextBlock x:Name="txtblock_PersonalId_Copy2" HorizontalAlignment="Left" Margin="56,328,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="35" Width="132" Cursor="" Foreground="#FFFF7B00" FontSize="24"><Run Text="Weigh"/><LineBreak/><Run/></TextBlock>
-            <TextBlock x:Name="txtblock_PersonalId_Copy3" HorizontalAlignment="Left" Margin="56,416,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="35" Width="132" Cursor="" Foreground="#FFFF7B00" FontSize="24"><Run Text="Post Type"/><LineBreak/><Run/></TextBlock>
+        <Grid x:Name="grid_reportOfOrders" Margin="5,10,0,-10" Grid.Column="1" Visibility="Collapsed">
+            <TextBlock x:Name="txtblock_ssn" HorizontalAlignment="Left" Margin="56,65,0,0" TextWrapping="Wrap" Text="SSN" VerticalAlignment="Top" Height="36" Width="132" Cursor="" Foreground="#FFFF7B00" FontSize="24"/>
+            <TextBlock x:Name="txtblock_pricepaid" HorizontalAlignment="Left" Margin="56,242,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="35" Width="170" Cursor="" Foreground="#FFFF7B00" FontSize="24"><Run Text="Price Paid"/><LineBreak/><Run/></TextBlock>
+            <TextBlock x:Name="txtblock_weigh" HorizontalAlignment="Left" Margin="56,328,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="35" Width="132" Cursor="" Foreground="#FFFF7B00" FontSize="24"><Run Text="Weigh"/><LineBreak/><Run/></TextBlock>
+            <TextBlock x:Name="txtblock_postType" HorizontalAlignment="Left" Margin="56,416,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="35" Width="132" Cursor="" Foreground="#FFFF7B00" FontSize="24"><Run Text="Post Type"/><LineBreak/><Run/></TextBlock>
             <Button Content="Search&#xD;&#xA;" Margin="597,498,88,49" Background="#FFFF7B00" BorderBrush="#FFFF7B00" FontSize="30" FontFamily="Bahnschrift Condensed"/>
-            <TextBlock x:Name="pricePaid_txt" HorizontalAlignment="Center" Margin="0,232,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="42" Width="218" Background="Black" Foreground="#FFFF7B00" RenderTransformOrigin="0.653,1.083"/>
-            <TextBlock x:Name="weigh_txt" HorizontalAlignment="Center" Margin="0,318,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="42" Width="218" Background="Black" Foreground="#FFFF7B00" RenderTransformOrigin="0.653,1.083"/>
+            <TextBlock x:Name="pricePaid_txt" HorizontalAlignment="Center" Margin="0,242,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="42" Width="218" Background="Black" Foreground="#FFFF7B00" RenderTransformOrigin="0.653,1.083"/>
+            <TextBlock x:Name="weigh_txt" HorizontalAlignment="Center" Margin="0,328,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="42" Width="218" Background="Black" Foreground="#FFFF7B00" RenderTransformOrigin="0.653,1.083"/>
             <TextBlock x:Name="personalID_txt" HorizontalAlignment="Center" Margin="0,65,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="42" Width="218" Background="Black" Foreground="#FFFF7B00" RenderTransformOrigin="0.653,1.083"/>
-            <ComboBox x:Name="packagetop_combobox" HorizontalAlignment="Center" Margin="0,152,0,0" VerticalAlignment="Top" Width="218" Height="32">
-                <CheckBox Content="Object"/>
-                <CheckBox Content="Document"/>
-                <CheckBox Content="breackable"/>
-            </ComboBox>
-            <ComboBox x:Name="postType_combobox" HorizontalAlignment="Center" Margin="0,416,0,0" VerticalAlignment="Top" Width="218" RenderTransformOrigin="-1.062,13.458" Height="32">
-                <CheckBox Content="VIP"/>
-                <CheckBox Content="usuall"/>
-            </ComboBox>
+            <TextBlock x:Name="txtblock_packagecontent" HorizontalAlignment="Left" Margin="56,148,0,0" TextWrapping="Wrap" Text="Package Content" VerticalAlignment="Top" Height="37" Width="218" FontSize="24">
+                <TextBlock.Foreground>
+                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                        <GradientStop Color="#FFFF7B00" Offset="1"/>
+                        <GradientStop Color="White" Offset="0"/>
+                    </LinearGradientBrush>
+                </TextBlock.Foreground>
+            </TextBlock>
+            <CheckBox x:Name="vip_checkbox_" Checked="vip_checkbox_Checked" Content="VIP" HorizontalAlignment="Left" Margin="338,416,0,0" VerticalAlignment="Top" Foreground="#FFFF7B00" BorderBrush="#FFFF7B00" FontSize="18" Width="108"/>
+            <CheckBox x:Name="usuall_checkbox_" Checked="usuall_checkbox_Checked" Content="Usuall" HorizontalAlignment="Left" Margin="338,455,0,0" VerticalAlignment="Top" Foreground="#FFFF7B00" BorderBrush="#FFFF7B00" FontSize="18" FontWeight="Bold" Width="90"/>
+            <CheckBox x:Name="breack_checkbox_" Checked="breack_checkbox_Checked" Content="Breackable" HorizontalAlignment="Left" Margin="338,134,0,0" VerticalAlignment="Top" Foreground="#FFFF7B00" BorderBrush="#FFFF7B00" FontSize="18" Width="110"/>
+            <CheckBox x:Name="doc_checkbox_" Checked="doc_checkbox_Checked" Content="Document" HorizontalAlignment="Left" Margin="338,162,0,0" VerticalAlignment="Top" Foreground="#FFFF7B00" BorderBrush="#FFFF7B00" FontSize="18" Width="110" RenderTransformOrigin="0.477,-0.194"/>
+            <CheckBox x:Name="object_checkbox_" Checked="object_checkbox_Checked" Content="Object" HorizontalAlignment="Left" Margin="338,189,0,0" VerticalAlignment="Top" Foreground="#FFFF7B00" BorderBrush="#FFFF7B00" FontSize="18" Width="110"/>
         </Grid>
 
         <Grid x:Name="grid_checkpackage" Grid.Column="1" Visibility="Collapsed" >
@@ -128,17 +131,7 @@
         </Grid>
 
         <Grid x:Name="grid_showPackage" Grid.Column="1" Visibility="Collapsed" Margin="10,10,0,0" >
-
-            <ComboBox x:Name="packagecontent_dropbox_Copy" HorizontalAlignment="Left" Margin="36,227,0,0" VerticalAlignment="Top" Width="235" IsDropDownOpen="True" SelectionChanged="ComboBox_SelectionChanged" Height="42" Foreground="#FFFF7B00" BorderBrush="#FFFF7B00" Background="#FF181615">
-                <CheckBox Content="Object"/>
-                <CheckBox Content="Document"/>
-                <CheckBox Content="breackable"/>
-            </ComboBox>
-            <CheckBox x:Name="expensive_checkbox_showpack" Content="Expensive" HorizontalAlignment="Left" Margin="45,287,0,0" VerticalAlignment="Top" Height="33" Width="234" Foreground="#FFFF7B00" FontSize="16" IsChecked="False" Cursor="" BorderBrush="#FFFF7B00"/>
-            <ComboBox x:Name="whichModel_dropbox_Copy" HorizontalAlignment="Left" Margin="627,342,0,0" VerticalAlignment="Top" Width="209" Height="40" BorderBrush="#FFFF7B00" Foreground="#FFFF7B00" Background="#FF181615">
-                <CheckBox Content="usuall"/>
-                <CheckBox Content="VIP"/>
-            </ComboBox>
+            <CheckBox x:Name="expensive_checkbox_showpack" Content="Expensive" HorizontalAlignment="Left" Margin="614,421,0,0" VerticalAlignment="Top" Height="33" Width="234" Foreground="#FFFF7B00" FontSize="16" IsChecked="False" Cursor="" BorderBrush="#FFFF7B00"/>
             <TextBlock x:Name="weigh_txtblock_showpack" HorizontalAlignment="Left" Margin="627,162,0,0" TextWrapping="Wrap" Text="Weigh" VerticalAlignment="Top" Height="52" Width="117" FontSize="24">
                 <TextBlock.Foreground>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -183,12 +176,6 @@
             <Label x:Name="reciever_lbl" Grid.Column="1" Content="Label" HorizontalAlignment="Left" Margin="627,100,0,0" VerticalAlignment="Top" Height="62" Width="203" BorderBrush="#FFFF7B00" Foreground="#FFFF7B00"/>
             <Label x:Name="weigh_lbl" Content="Label" HorizontalAlignment="Left" Margin="627,215,0,0" VerticalAlignment="Top" Height="54" Width="203" BorderBrush="#FFFF7B00" Foreground="#FFFF7B00" />
             <TextBlock x:Name="comment_txtblock" TextWrapping="Wrap" Text="Comment" Margin="36,483,28,47" Background="White"/>
-            <ComboBox HorizontalAlignment="Left" Margin="36,393,0,0" VerticalAlignment="Top" Width="252" Height="44" Background="Black">
-                <CheckBox Content="Registered"/>
-                <CheckBox Content="Ready for send"/>
-                <CheckBox Content="Sending"/>
-                <CheckBox Content="Delivered"/>
-            </ComboBox>
             <TextBlock x:Name="status_txtblock" HorizontalAlignment="Left" Margin="36,336,0,0" TextWrapping="Wrap" Text="Status" VerticalAlignment="Top" Height="52" Width="118" FontSize="36">
                 <TextBlock.Foreground>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -197,6 +184,15 @@
                     </LinearGradientBrush>
                 </TextBlock.Foreground>
             </TextBlock>
+            <CheckBox x:Name="regsitered_checkbox" Content="Registered" HorizontalAlignment="Left" Margin="45,388,0,0" VerticalAlignment="Top" Height="33" Width="117" Foreground="#FFFF7B00" FontSize="16" IsChecked="False" Cursor="" BorderBrush="#FFFF7B00"/>
+            <CheckBox x:Name="ready__checkbox" Content="Ready for send" HorizontalAlignment="Left" Margin="182,382,0,0" VerticalAlignment="Top" Height="33" Width="138" Foreground="#FFFF7B00" FontSize="16" IsChecked="False" Cursor="" BorderBrush="#FFFF7B00"/>
+            <CheckBox x:Name="sending_checkbox" Content="Sending" HorizontalAlignment="Left" Margin="45,421,0,0" VerticalAlignment="Top" Height="34" Width="117" Foreground="#FFFF7B00" FontSize="16" IsChecked="False" Cursor="" BorderBrush="#FFFF7B00"/>
+            <CheckBox x:Name="delivered_checkbox" Content="Delivered" HorizontalAlignment="Left" Margin="182,415,0,0" VerticalAlignment="Top" Height="34" Width="122" Foreground="#FFFF7B00" FontSize="16" IsChecked="False" Cursor="" BorderBrush="#FFFF7B00"/>
+            <CheckBox x:Name="expensive_checkbox_showpack_Copy" Content="Usuall" HorizontalAlignment="Left" Margin="627,337,0,0" VerticalAlignment="Top" Height="33" Width="105" Foreground="#FFFF7B00" FontSize="16" IsChecked="False" Cursor="" BorderBrush="#FFFF7B00"/>
+            <CheckBox x:Name="expensive_checkbox_showpack_Copy1" Content="VIP" HorizontalAlignment="Left" Margin="627,370,0,0" VerticalAlignment="Top" Height="33" Width="105" Foreground="#FFFF7B00" FontSize="16" IsChecked="False" Cursor="" BorderBrush="#FFFF7B00"/>
+            <CheckBox x:Name="checkbox_breack" Checked="breack_checkbox_Checked" Content="Breackable" HorizontalAlignment="Left" Margin="45,238,0,0" VerticalAlignment="Top" Foreground="#FFFF7B00" BorderBrush="#FFFF7B00" FontSize="18" Width="109"/>
+            <CheckBox x:Name="checkbox_doc" Checked="doc_checkbox_Checked" Content="Document" HorizontalAlignment="Left" Margin="45,215,0,0" VerticalAlignment="Top" Foreground="#FFFF7B00" BorderBrush="#FFFF7B00" FontSize="18" Width="109"/>
+            <CheckBox x:Name="checkbox_object" Checked="object_checkbox_Checked" Content="Object" HorizontalAlignment="Left" Margin="45,269,0,0" VerticalAlignment="Top" Foreground="#FFFF7B00" BorderBrush="#FFFF7B00" FontSize="18" Width="109"/>
         </Grid>
 
 
